Resolve some UI issues
1. Update some strings in the page
2. Changed the UI theme
3. resolve a truncation

--- a/css/custom.css
+++ b/css/custom.css
@@ -55,7 +55,7 @@
 
 .custom-label {
     float: left;
-    width: 25%;
+    width: 20%;
     text-align: right;
     white-space: nowrap;
     color: #808080;
@@ -63,7 +63,7 @@
 
 .custom-view {
     margin-left: 30%;
-    padding: 0 10px;
+    padding: 0 20px;
     word-wrap: break-word;
 }
 
